gnome-shell: Fix clock button label alignment
Previous commit moved the clock panel-button label 1px upwards for
unknown reason. Fix with 1px top padding.

--- a/common/gnome-shell/3.36/sass/_common.scss
+++ b/common/gnome-shell/3.36/sass/_common.scss
@@ -925,7 +925,7 @@ StScrollBar {
         @extend .panel-button;
 
         box-shadow: none;
-        padding: 0 10px;
+        padding: 1px 10px 0;
       }
 
       &:hover .clock { @extend %panel_button_hover; }
